# mlops

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  dvc_init.sh  pyproject.toml  versionate_data.sh
.github/workflows/: CI.yaml
mlflow/: Dockerfile  log_mlflow_with_localhost.py  requirements.txt
mlruns/0/: meta.yaml
src/backend/: main.py
src/dashboard/: streamlit_app.py
src/fastapi_service/: config.py  main.py  models.py  utils.py
src/fastapi_service/s3/: __init__.py  utils.py
src/frontend/: streamlit_app.py
src/grpc_backend/: client.py  global_vars.py  ml_service.proto  ml_service_pb2.py  ml_service_pb2_grpc.py  server.py
src/grpc_service/: client.py  ml_service.proto  ml_service_pb2.py  ml_service_pb2_grpc.py  server.py  utils.py
src/models/: data_preprocessing.py  dataset.py  inference.py  models.py  modules.py  train.py
tests/: convert_dataset.py  test_checkpoint_info_extraction.py  test_data_preprocessing.py  test_dataset.py  test_inference.py  test_perceptron_classifier.py
tests/fixtures/: targets.pkl
