[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["M1croZavr <tlashukov@gmail.com>"]
readme = "README.md"
packages = [
    {include = "backend", from = "src"},
    {include = "models", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.4.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
torchvision = "^0.20.1"
python-multipart = "^0.0.17"
idx2numpy = "^1.2.3"
grpcio = "^1.67.1"
grpcio-tools = "^1.67.1"
streamlit = "^1.40.1"
streamlit-drawable-canvas = "^0.9.3"

[tool.poetry.scripts]
start-server = "src.backend.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
